fix: varargs issue